styles.css
/* button {
  height: 30px;
  width: 30px;
  outline: none;
  margin: 10px;
  border: none;
  border-radius: 2px;
}

button.current {
  box-shadow: 0 0 0 2px white,
              0 0 0 4px black;
} */

body {
  width: 300px;
  font-family: Avantgarde, 'TeX Gyre Adventor', 'URW Gothic L', sans-serif;
  background-color: #202124;
  color: #bdc1c6;
}

.tab {
  padding: 5pt 5pt;
  font-size: 10pt;
  display: flex;
  align-items: center;
}

.tab-title {
  flex-grow: 1;
}

.tab:hover {
  background-color: lightblue;
  background-color: #2f2f30;
  /* Change mouse pointer */
  cursor: pointer;
}

.tab-list {
  margin-top: 25px;
}

.list-title {
  text-align: center;
  font-size: 14pt;
  font-weight: bold;
  background-color: inherit;

  padding-top: 5px;
  position:fixed;
  top:0;
  left: 0;
  width: 100%;
}

.muted {
  background: url('./images/volume-mute.svg');
}

.audible {
  background: url('./images/volume-up.svg');
}


.icon {
  flex: 0 0 20px;
  height: 20px;
  margin-left: 8px;
  
  
  background-size: 20px 20px;
  background-repeat: no-repeat;
  background-position: center;
  opacity: 0.5;
  /* Style icons for dark theme */
}

.icon:hover {
  opacity: 1;
}

.close {
  /* color:white;
  height: 12px;
  filter:  */
  background: url('./images/x-circle.svg');
  background-repeat: no-repeat;
  background-size: 12px;
  background-position: center;
  /* flex: 0 0 12px; */
  /* -webkit-mask-image: url('./images/x-circle.svg');
  mask */
  
}

.close:hover {
  /* background-size: 16px;
  flex-basis: 16px; */
}


.favicon {
  flex-basis: 0 0 16;
  /* align-self: center; */

  padding-right: 10pt;

  height: 16px;
  width: 16px;
}

